Fixed spacing of headings

--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -25,25 +25,27 @@ html, body {
   background: var(--color_main_background);
 }
 
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
+  color: var(--color_alt_text);
+  line-height: 1em;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
+
 h1, .h1 {
   font-size: 1.802rem;
-  color: var(--color_alt_text);
 }
 h2, .h2 {
   font-size: 1.602rem;
-  color: var(--color_alt_text);
 }
 h3, .h3 {
   font-size: 1.424rem;
-  color: var(--color_alt_text);
 }
 h4, .h4 {
   font-size: 1.266rem;
-  color: var(--color_alt_text);
 }
 h5, .h5 {
   font-size: 1.125rem;
-  color: var(--color_alt_text);
 }
 
 p {
